--- a/pom.xml
+++ b/pom.xml
@@ -108,4 +108,17 @@
     </plugins>
   </build>
 
+  <distributionManagement>
+    <repository>
+      <id>fakerepository-releases</id>
+      <name>Local file system</name>
+      <url>file:///tmp/repository/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>fakerepository-snapshots</id>
+      <name>Local file system</name>
+      <url>file:///tmp/repository/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
 </project>
