--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,6 @@
   </properties>
 
   <build>
-    <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -92,13 +91,33 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.4</version>
-        <configuration>
-          <descriptor>src/assembly/bin.xml</descriptor>
-          <finalName>classist-dist</finalName>
-        </configuration>
         <executions>
           <execution>
+            <id>make-jar-with-dependencies</id>
+            <configuration>
+              <appendAssemblyId>false</appendAssemblyId>
+              <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+              </descriptorRefs>
+              <archive>
+                <manifest>
+                  <mainClass>com.andersonlfeitosa.classist.Classist</mainClass>
+                </manifest>
+              </archive>
+              <finalName>${project.artifactId}</finalName>
+            </configuration>
             <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>dist</id>
+            <configuration>
+              <descriptor>src/assembly/bin.xml</descriptor>
+              <finalName>${project.artifactId}</finalName>
+            </configuration>
+            <phase>install</phase>
             <goals>
               <goal>single</goal>
             </goals>
