[maven-release-plugin] prepare release classist-1.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.andersonlfeitosa.classist</groupId>
   <artifactId>classist</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <name>Classist</name>
   <description>Classist is designed to help you find classes in jars. Classist will recursively walk a filesystem reading in the contents of java archives (ie ears, jars, wars, sars, rars etc). The resulting class files are then searchable using regex. Classist will show you which jars a particular file resides in and will show you all duplicate files within the search directories.Classist is particularly helpful when attempting to resolve ClassNotFoundExceptions and NoClassDefFoundExceptions as you can search within all your jar/sar/ear/war/rar/par files and add the appropriate entries to you classpath. Originally developed and maintained on [Google Code](https://code.google.com/archive/p/classist) by luke.biddell.</description>
   <url>https://github.com/andersonlfeitosa/classist.git</url>
@@ -20,7 +20,7 @@
     <connection>scm:git:git://github.com/andersonlfeitosa/classist.git</connection>
     <developerConnection>scm:git:git@github.com:andersonlfeitosa/classist.git</developerConnection>
     <url>https://github.com/andersonlfeitosa/classist</url>
-    <tag>HEAD</tag>
+    <tag>classist-1.0.1</tag>
   </scm>
 
   <licenses>
